--- a/config/database.ini
+++ b/config/database.ini
@@ -1,11 +1,15 @@
 [developpement]
 driver=mysql
-database=foyerstpierre
+database=foyeretudiantsrodez
 host=localhost
 port=3306
+username=foyeretudiantsrodez
+password="Wm05NVpYSmxkSFZrYVdGdWRITT0="
 
 [production]
 driver=mysql
-database=foyerstpierre
+database=foyeretudiantsrodez
 host=localhost
 port=3306
+username=root
+password=
